@@ -15,10 +15,10 @@ package org.openhab.binding.powermax.internal.handler;
 import static org.openhab.binding.powermax.internal.PowermaxBindingConstants.*;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.EventObject;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
@@ -113,7 +113,7 @@ public class PowermaxBridgeHandler extends BaseBridgeHandler implements Powermax
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(PowermaxDiscoveryService.class);
+        return Set.of(PowermaxDiscoveryService.class);
     }
 
     public @Nullable PowermaxState getCurrentState() {
@@ -628,8 +628,7 @@ public class PowermaxBridgeHandler extends BaseBridgeHandler implements Powermax
                 continue;
             }
             ThingHandler thingHandler = thing.getHandler();
-            if (thingHandler instanceof PowermaxThingHandler) {
-                PowermaxThingHandler handler = (PowermaxThingHandler) thingHandler;
+            if (thingHandler instanceof PowermaxThingHandler powermaxThingHandler) {
                 if (thing.getThingTypeUID().equals(THING_TYPE_ZONE)) {
                     // All of the zone state objects will have the same list of values.
                     // The use of getZone(1) here is just to get any PowermaxZoneState
@@ -638,12 +637,12 @@ public class PowermaxBridgeHandler extends BaseBridgeHandler implements Powermax
                     for (Value<?> value : state.getZone(1).getValues()) {
                         String channelId = value.getChannel();
                         if ((channel == null) || channel.equals(channelId)) {
-                            handler.updateChannelFromAlarmState(channelId, state);
+                            powermaxThingHandler.updateChannelFromAlarmState(channelId, state);
                         }
                     }
                 } else if (thing.getThingTypeUID().equals(THING_TYPE_X10)) {
                     if ((channel == null) || channel.equals(X10_STATUS)) {
-                        handler.updateChannelFromAlarmState(X10_STATUS, state);
+                        powermaxThingHandler.updateChannelFromAlarmState(X10_STATUS, state);
                     }
                 }
             }
